--- a/src/vista/medidas/JPanelCurvas.form
+++ b/src/vista/medidas/JPanelCurvas.form
@@ -33,13 +33,14 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="Exportar" alignment="0" min="-2" pref="83" max="-2" attributes="0"/>
-                  <Component id="Borrar" alignment="0" min="-2" pref="83" max="-2" attributes="0"/>
-                  <Component id="Grafica" alignment="0" min="-2" pref="83" max="-2" attributes="0"/>
-                  <Component id="Campañas" alignment="0" min="-2" max="-2" attributes="0"/>
+          <Group type="102" attributes="0">
+              <EmptySpace min="18" pref="18" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="2" attributes="0">
+                  <Component id="Campañas" linkSize="1" alignment="2" min="-2" max="-2" attributes="0"/>
+                  <Component id="Corregir" linkSize="1" alignment="2" min="-2" pref="83" max="-2" attributes="0"/>
+                  <Component id="Grafica" linkSize="1" alignment="2" min="-2" pref="83" max="-2" attributes="0"/>
+                  <Component id="Borrar" linkSize="1" alignment="2" min="-2" pref="83" max="-2" attributes="0"/>
+                  <Component id="Exportar" linkSize="1" alignment="2" min="-2" pref="83" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
               <Component id="jScrollPane1" pref="371" max="32767" attributes="0"/>
@@ -49,13 +50,15 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <Component id="Exportar" min="-2" max="-2" attributes="0"/>
+              <Component id="Exportar" linkSize="2" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="Borrar" min="-2" max="-2" attributes="0"/>
+              <Component id="Borrar" linkSize="2" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="Grafica" min="-2" max="-2" attributes="0"/>
+              <Component id="Grafica" linkSize="2" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="Corregir" linkSize="2" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
-              <Component id="Campañas" min="-2" max="-2" attributes="0"/>
+              <Component id="Campañas" linkSize="2" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
           <Component id="jScrollPane1" pref="335" max="32767" attributes="0"/>
@@ -107,5 +110,11 @@
         </Component>
       </SubComponents>
     </Container>
+    <Component class="javax.swing.JButton" name="Corregir">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Corregir"/>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
+    </Component>
   </SubComponents>
 </Form>
