--- a/src/vista/JFramePrincipal.form
+++ b/src/vista/JFramePrincipal.form
@@ -105,7 +105,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="14" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Iidioma:"/>
+            <Property name="text" type="java.lang.String" value="Idioma:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JComboBox" name="jComboBox1">
